--- a/templates/cart/index.html.twig
+++ b/templates/cart/index.html.twig
@@ -124,7 +124,7 @@
                 <button type="button" class="primary-btn" data-dismiss="modal" style="background-color: #6c757d; border: none; color: #fff; font-family: 'Montserrat', sans-serif;">
                     Cancel
                 </button>
-                <a href="{{ path('app_index') }}" class="primary-btn" style="background-color: #D10024; border: none; color: #fff; font-family: 'Montserrat', sans-serif;">
+                <a href="{{ path('app_account_verify_email') }}" class="primary-btn" style="background-color: #D10024; border: none; color: #fff; font-family: 'Montserrat', sans-serif;">
                     Verify Email
                 </a>
             </div>
