--- a/templates/admin_fragments/footer.html.twig
+++ b/templates/admin_fragments/footer.html.twig
@@ -39,8 +39,7 @@
                     <div class="footer">
                         <h3 class="footer-title">Service</h3>
                         <ul class="footer-links">
-                            <li><a href="#">My Account</a></li>
-                            <li><a href="#">Help</a></li>
+                            <li><a href="{{ path('app_account') }}">My Account</a></li>
                         </ul>
                     </div>
                 </div>
