--- a/templates/admin_fragments/header.html.twig
+++ b/templates/admin_fragments/header.html.twig
@@ -17,7 +17,7 @@
                         </a>
                         <ul class="dropdown-menu" style="background-color: #333;">
                             <li>
-                                <a href="#">
+                                <a href="{{ path('app_account') }}">
                                     <i class="fa fa-user"></i> My Profile
                                 </a>
                             </li>
