--- a/templates/command/history.html.twig
+++ b/templates/command/history.html.twig
@@ -8,7 +8,7 @@
         <div class="container">
             <div class="row">
                 <div class="col-md-12">
-                    <h2 class="section-title">Your commands History</h2>
+                    <h2 class="section-title">Your Order History</h2>
                     {% if commands is not empty %}
                         <div class="table-responsive">
                             <table class="table cart-table">
