--- a/templates/base_stat.html.twig
+++ b/templates/base_stat.html.twig
@@ -70,9 +70,9 @@
             <h5>Statistics Menu</h5>
             <ul class="nav flex-column">
                 <li class="nav-item"><a class="nav-link" href="{{ path('admin_statistics_categories') }}">Items Sold per Category</a></li>
-                <li class="nav-item"><a class="nav-link" href="{{ path('admin_statistics_sales') }}">Total Sales (€)</a></li>
+                <li class="nav-item"><a class="nav-link" href="{{ path('admin_statistics_sales') }}">Sales Statistics</a></li>
                 <li class="nav-item"><a class="nav-link" href="{{ path('admin_statistics_sales_by_category') }}">Sales by Category per Month</a></li>
-                <li class="nav-item"><a class="nav-link" href="{{ path('admin_statistics_top_products') }}">Top Products Sold</a></li>
+                <li class="nav-item"><a class="nav-link" href="{{ path('admin_statistics_top_products') }}">Top Sold Products</a></li>
             </ul>
         {% endblock %}
     </aside>
