Adding order history to footer

--- a/templates/fragments/footer.html.twig
+++ b/templates/fragments/footer.html.twig
@@ -37,6 +37,7 @@
                                 <li><a href="{{ path('app_account') }}">My Account</a></li>
                                 <li><a href="{{ path('app_cart') }}">View Cart</a></li>
                                 <li><a href="{{ path('app_wish_list') }}">Wishlist</a></li>
+                                <li><a href="{{ path('app_order_history') }}">Order History</a></li>
                                 <li>
                                     <a href="#" data-toggle="modal" data-target="#logoutModal">
                                         Logout
