Fixing http request error pages

--- a/templates/bundles/TwigBundle/Exception/error404.html.twig
+++ b/templates/bundles/TwigBundle/Exception/error404.html.twig
@@ -47,7 +47,7 @@
     <div class="error-container">
         <div class="error-code">404</div>
         <p class="error-message">Oops! The page you're looking for doesn't exist.</p>
-        <a href="{{ path('app_index') }}" class="home-button">Return to Home Page</a>
+        <a href="{{ path('app_error') }}" class="home-button">Return to Home Page</a>
     </div>
 </body>
 </html>
