--- a/templates/bundles/TwigBundle/Exception/error403.html.twig
+++ b/templates/bundles/TwigBundle/Exception/error403.html.twig
@@ -48,7 +48,7 @@
     <div class="error-code">403</div>
     <div class="error-title" style="font-size: 2rem; font-weight: bold; margin: 1rem 0; color: #2B2D42;">Forbidden</div>
     <p class="error-message">You don't have permission to access this resource.</p>
-    <a href="{{ path('app_index') }}" class="home-button">Return to Home Page</a>
+    <a href="{{ path('app_error') }}" class="home-button">Return to Home Page</a>
 </div>
 </body>
 </html>
