--- a/templates/cart_item/index.html.twig
+++ b/templates/cart_item/index.html.twig
@@ -30,21 +30,13 @@
                         <p>{{ produit.description }}</p>
                     </div>
 
-                    <div class="product-options">
-                        <label>
-                            Category: <strong>{{ produit.categorie.getName() }}</strong>
-                        </label>
-                        <label>
-                            Stock: <strong>{{ produit.stock }} units</strong>
-                        </label>
-                    </div>
-
                     <!-- Add to Cart Form -->
                     <form method="post" action="{{ path('app_cart_add_item', {'id': produit.id}) }}">
                         <div class="form-group mb-3">
                             <label for="quantity" class="form-label">Quantity</label>
                             <input type="number" id="quantity" name="quantity" class="form-control"
                                    min="1" max="{{ produit.stock }}" value="1" required>
+                            <small class="text-muted">Available stock: {{ produit.stock}}</small>
                         </div>
 
                         <button type="submit" class="primary-btn">Add to Cart</button>
