add a picture slider

--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -39,6 +39,7 @@
         {% include 'fragments/header.html.twig' %}
     {% endif %}
 {% endblock %}
+{% block slider %}{% endblock %}
 
 <div class="container mt-4" style="min-height: 70vh; padding: 20px;">
 {% block body %}
