--- a/templates/index.html.twig
+++ b/templates/index.html.twig
@@ -1,5 +1,9 @@
 {% extends 'base.html.twig' %}
+
     {% block emplacement %} {% if category is not null %}{{ category }} {% endif %}{% endblock %}
+    {% block slider %}
+        {% include 'fragments/picSlider.html.twig' %}
+    {% endblock %}
     {% block store %}
 
     <div id="store" class="col-md-9">
