--- a/templates/cart/index.html.twig
+++ b/templates/cart/index.html.twig
@@ -4,6 +4,10 @@
 {% block emplacement %}Shopping Cart{% endblock %}
 
 {% block body %}
+<link rel="stylesheet" href="{{ asset('css/buttons.css') }}">
+{% set currentContainer = 'Cart' %}
+{% include 'fragments/remove_item_modal.html.twig' %}
+
 <div class="section">
     <div class="container">
         <div class="row">
@@ -57,9 +61,9 @@
                                     <td class="cart-subtotal">€{{ item.produit.price * item.quantité}}</td>
                                     <td class="cart-actions">
                                         <a href="{{ path('app_update_item', {'id': item.id}) }}"
-                                           class="btn btn-sm btn-primary"><i class="fa fa-edit"></i> Edit</a>
-                                        <a href="{{ path('app_cart_remove_item', {'id': item.id}) }}"
-                                           class="btn btn-sm btn-danger"><i class="fa fa-trash"></i> Remove</a>
+                                           class="btn custom-btn btn-sm"><i class="fa fa-edit"></i> Edit</a>
+                                        <a href="#" data-toggle="modal" data-target="#removeItemModal" data-url="{{ url('app_cart_remove_item', {'id': item.id }) }}"
+                                           class="btn remove-btn btn-sm"><i class="fa fa-trash"></i> Remove</a>
                                     </td>
                                 </tr>
                                 {% endfor %}
@@ -94,9 +98,6 @@
                                         data-checkout-url="{{ path('app_checkout', {'id': cart.id}) }}">
                                     Proceed to Checkout
                                 </button>
-
-
-
 
                             </div>
                         </div>
@@ -133,4 +134,18 @@
 </div>
 
 <script src="{{ asset('js/cart.js') }}"></script>
+
+    <script>
+        document.addEventListener('DOMContentLoaded', function () {
+            const removeButtons = document.querySelectorAll('.remove-btn');
+            const confirmRemoveButton = document.querySelector('.confirm-remove');
+
+            removeButtons.forEach(button => {
+                button.addEventListener('click', function () {
+                    const removeUrl = this.getAttribute('data-url');
+                    confirmRemoveButton.setAttribute('href', removeUrl);
+                });
+            });
+        });
+    </script>
 {% endblock %}
