--- a/templates/admin_view/product-form.html.twig
+++ b/templates/admin_view/product-form.html.twig
@@ -5,6 +5,7 @@
 {% endblock %}
 
 {% block body %}
+<link rel="stylesheet" href="{{ asset('css/buttons.css') }}">
 <div class="container mt-4">
 
     {% if  id==0   %}
@@ -78,11 +79,11 @@
         <div class="row">
             <div class="col-md-6">
                 {% if  id==0   %}
-                    <button type="submit" class="btn btn-primary">Add Product</button>
+                    <button type="submit" class="btn custom-admin-btn">Add Product</button>
                 {% else %}
-                    <button type="submit" class="btn btn-primary">Edit Product</button>
+                    <button type="submit" class="btn custom-admin-btn">Edit Product</button>
                 {% endif %}
-                <a href="{{ url('produit.list') }}" class="btn btn-secondary">cancel</a>
+                <a href="{{ url('produit.list') }}" class="btn custom-btn">cancel</a>
             </div>
         </div>
     {{ form_end(form) }}
