--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -92,14 +92,17 @@
             <div class="row">
                 <!-- ASIDE -->
                 {% block aside %}
+
                     <div id="aside" class="col-md-3">
                         <!-- aside Widget -->
                         <div class="aside">
                             <h3 class="aside-title">Categories</h3>
                             <div class="checkbox-filter" id="category-filter">
+                                {% set checkedCategories = category %}
                                 {% for category in categories %}
                                     <div class="input-checkbox">
-                                        <input type="checkbox" id="category-{{loop.index }}" value="{{ category.categoryName }}">
+                                        <input type="checkbox" id="category-{{loop.index }}" value="{{ category.categoryName }}"
+                                        {% if category.categoryName in checkedCategories %}checked{% endif %}>
                                         <label for="category-{{loop.index }}">
                                             <span></span>
                                             {{ category.categoryName|capitalize }}
@@ -118,12 +121,12 @@
                             <div class="price-filter">
                                 <div id="price-slider" ></div>
                                 <div class="input-number price-min">
-                                    <label for="price-min"><input id="price-min" type="number" max="9999.0"></label>
+                                    <label for="price-min"><input id="price-min" type="number" min="1.0" value="{{ PriceMin|default(1) }}"></label>
 
                                 </div>
                                 <span>-</span>
                                 <div class="input-number price-max" >
-                                    <label for="price-max"><input id="price-max" type="number" max="9999.0"></label>
+                                    <label for="price-max"><input id="price-max" type="number" max="9999.0" value="{{ PriceMax|default(9999) }}"></label>
 
                                 </div>
                             </div>
