--- a/templates/admin_view/product-form.html.twig
+++ b/templates/admin_view/product-form.html.twig
@@ -83,7 +83,7 @@
                 {% else %}
                     <button type="submit" class="btn custom-admin-btn">Edit Product</button>
                 {% endif %}
-                <a href="{{ url('produit.list') }}" class="btn custom-btn">cancel</a>
+                <a href="{{ url('produit.list') }}" class="btn admin-cancel-btn">cancel</a>
             </div>
         </div>
     {{ form_end(form) }}
