--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -98,7 +98,7 @@
                         <div class="aside">
                             <h3 class="aside-title">Categories</h3>
                             <div class="checkbox-filter" id="category-filter">
-                                {% set checkedCategories = category %}
+                                {% set checkedCategories = category is defined ? category : null %}
                                 {% for category in categories %}
                                     <div class="input-checkbox">
                                         <input type="checkbox" id="category-{{loop.index }}" value="{{ category.categoryName }}"
