Fixing toast messages

--- a/templates/admin_fragments/footer.html.twig
+++ b/templates/admin_fragments/footer.html.twig
@@ -14,7 +14,7 @@
                         <ul class="footer-links">
                             <li><i class="fa fa-map-marker"></i>INSAT - Tunis</li>
                             <li><i class="fa fa-phone"></i>85 555</li>
-                            <li><i class="fa fa-envelope-o"></i>echrPC@gmail.com</li>
+                            <li><i class="fa fa-envelope-o"></i>echriPC@gmail.com</li>
                         </ul>
                     </div>
                 </div>
