--- a/templates/admin_fragments/footer.html.twig
+++ b/templates/admin_fragments/footer.html.twig
@@ -65,7 +65,7 @@
                         <li><i class="fa fa-cc-amex"></i></li>
                     </ul>
                     <span class="copyright">
-                        Copyright &copy;<script>document.write(new Date().getFullYear());</script> All rights reserved
+                        Copyright &copy;<script>document.write(new Date().getFullYear());</script> echriPC. All rights reserved.
                     </span>
 
                 </div>
