--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -157,7 +157,7 @@
                                     <div class="product-body">
                                         <p class="product-category">{{ product.categorie.name }}</p>
                                         <h3 class="product-name"><a href="{{ path('produit_details', {'id': product.id}) }}">{{ product.name }}</a></h3>
-                                        <h4 class="product-price">${{ product.price }} <del class="product-old-price">${{ product.price * 1.2|round(2) }}</del></h4>
+                                        <h4 class="product-price">€{{ product.price }} <del class="product-old-price">€{{ product.price * 1.2|round(2) }}</del></h4>
                                     </div>
                                 </div>
                             {% endfor %}
