--- a/templates/index.html.twig
+++ b/templates/index.html.twig
@@ -64,7 +64,7 @@
                     <div class="product-body">
                         <p class="product-category">{{ produit.categorie.getName() }}</p>
                         <h3 class="product-name">{{ produit.name }}</h3>
-                        <h4 class="product-price">$ {{ produit.price}} <del class="product-old-price">${{ produit.price * 1.2|round(2)}}</del></h4>
+                        <h4 class="product-price">€ {{ produit.price}} <del class="product-old-price">€{{ produit.price * 1.2|round(2)}}</del></h4>
                         <div class="product-rating">
                             <i class="fa fa-star"></i>
                             <i class="fa fa-star"></i>
