--- a/templates/admin_view/product-form.html.twig
+++ b/templates/admin_view/product-form.html.twig
@@ -71,7 +71,9 @@
                     {{ form_label(form.image, 'Product Image') }}
                     {{ form_widget(form.image, {'attr': {'class': 'form-control'}}) }}
                     <small class="form-text text-muted">Format accepté: JPG, JPEG, PNG (max 1Mo)</small>
-                    {{ form_errors(form.image) }}
+                    <div class="form-error text-danger">
+                        {{ form_errors(form.image) }}
+                    </div>
                 </div>
             </div>
         </div>
